*** 20010611_1 by leeh
- moved the "not approved on efnet section" up to where people
  will actually see it.. it was ok when it was just glines, but its
  grown significantly..
- moved LITTLE_I_LINES out of not-on-efnet section, I dont really think
  its a problem, and its a local decision anyway really


*** 20010610_2 by kreator
- added /usr/pkg and /usr/local paths for openssl detection since i have
  systems with those paths used for ssl - NetBSD, etc.


*** 20010610_1 by db
- moved LITTLE_I_LINES into "not supported" section *sigh*



*** 20010609_5 by db
- #ifdef'ed out features not approved on EFNet KNOCK and +e *sigh*



*** 20010609_4 by db
submitted by Walter Campbell
- igore of bogus TS should be in version string



*** 20010609_3 by jdc
* Removal of cipher priority information for config.h.  This isn't
  applicable anymore.



*** 20010609_2 by jdc
* Forgot to remove one extra line due to previous debugging session
  with Hwy.  Line 452 needed to be deleted.  Oops.



*** 20010609_1 by jdc
- Fixes for cipher autoselection.  Order of ciphers was wrong; they
  were being tested in order of best ("most secure") to worst.  The
  last match is always picked, which would've been DES/56 on most
  systems.
- BF/256 and BF/128 would've never been made available; #ifdef was actually
  a #ifndef (s_crypt.h).  Oops.



*** 20010608_3 by db
From Walter Campbell

1.  Updated example.conf for the cryptlinks patch
2.  Fixed a compilation issue with the bogus TS patch
3.  Cleaned up the make depend's
4.  Fixed a core with CRYPT_LINKS and INFO
5.  Use /dev/urandom for the random block in mkkeypair, this is not quite
    as secure, but works on almost all systems
6.  Updated .depend
7.  Changed the patchlevel to 6.1b1



*** 20010608_2 by kreator
- oops, forgot to do the same with config.h.dist as with config.h


*** 20010608_1 by kreator
- add simple support for EGD seeding of OpenSSL PRNG


*** 20010607_5 by db
Another patch from Walter Campbell
